# rust-postgres

./: .gitignore  Cargo.toml  Makefile.toml  cargo-generate.toml  justfile
configurations/: base.toml
src/: configuration.rs  error.rs  lib.rs  logger.rs  main.rs
src/storage/: mod.rs
