[package]
name = "isac"
version = "0.1.0"
edition = "2021"

[dependencies]
# cli args
clap = { version = "4", features = ["derive"] }
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# config
config = "0.15"
